# portmate

./: .gitignore  README.md  license  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: winclick-formate.ps1  winclick.ps1
src-tauri/resources/hoon/: exit-hook.hoon
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: boot.rs  boot_existing.rs  boot_key.rs  click_stop.rs  conn_peek.rs  memory.rs  memory_sched.rs  mod.rs  process_utils.rs  ship_stats.rs  urbit_http.rs
src/components/: BootWizard.tsx  GlobalSchedulerView.tsx  MemoryManager.tsx  MemorySchedular.tsx  ShipCard.tsx  TerminalOutput.tsx
