[package]
name = "portmate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "portmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
 
[build-dependencies]
tauri-build = { version = "2", features = [] }
 
[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["stream", "blocking"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
 
# libc is only needed on Unix for signal calls (kill, SIGKILL) in lib.rs and memory.rs.
# Declaring it unconditionally would pull it into the Windows build unnecessarily
# and can cause link warnings. The #[cfg(unix)] blocks in the source already
# gate all libc usage, so this target filter keeps Cargo in sync with the code.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
